--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -23,7 +23,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="d-flex align-items-center">
                                     <i class="fa fa-long-arrow-left"></i>
-                                    <span class="ml-2"><a href="{% url 'home' %}">Back</a></span>
+                                    <span class="ml-2"><a href="{% url 'home' %}">Trang chủ</a></span>
                                 </div>
                                 <i class="fa fa-shopping-cart text-muted"></i>
                             </div>
