--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -2,16 +2,16 @@
 {% load static %}
 {% load humanize %}
 {% block cart_content %}
-<div class="row" style="width:100%">
+{% comment %} <div class="row" style="width:100%">
 	<div class="col-lg-12">
 		<div class="box-element">
-			<a  class="btn btn-outline-dark" href="{% url 'home' %}">&#x2190; Tiếp tục mua sắm</a>
+			<a  class="btn btn-outline-dark" href="{% url 'home' %}">&#x2190; Tiếp tục mua hàng</a>
 			<br>
 			<br>
 			<table class="table">
 				<tr>
 					<th><h5>Số lượng: <strong>{{order.get_cart_items}}</strong></h5></th>
-					<th><h5>Tổng tiền: <strong>{{order.get_cart_total}} VND</strong></h5></th>
+					<th><h5>Tổng tiền: <strong>{{order.get_cart_total|floatformat:0|intcomma}} VND</strong></h5></th>
 					<th>
 						<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Mua hàng</a>
 					</th>
@@ -32,7 +32,7 @@
 			<div class="cart-row">
 				<div style="flex:2"><img class="row-image" src="{{item.product.ImageURL}}"></div>
 				<div style="flex:2"><p>{{item.product.name}}</p></div>
-				<div style="flex:1"><p>{{item.product.price}} VND</p></div>
+				<div style="flex:1"><p>{{item.product.price|floatformat:0|intcomma}} VND</p></div>
 				<div style="flex:1">
 					<p class="quantity">{{item.quantity}}</p>
 					<div class="quantity">
@@ -41,10 +41,61 @@
 						<img data-product = {{item.product.id}} data-action = "remove" class="chg-quantity update-cart" src="{% static  'app/images/arrow-down.png' %}">
 					</div>
 				</div>
-				<div style="flex:1"><p>{{item.get_total}} VND</p></div>
+				<div style="flex:1"><p>{{item.get_total|floatformat:0|intcomma}} VND</p></div>
 			</div>
 			{% endfor %}
 		</div>
 	</div>
+</div> {% endcomment %}
+
+<div class="container py-5">
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <a href="{% url 'home' %}" class="btn btn-outline-secondary mb-3">
+                &larr; Tiếp tục mua hàng
+            </a>
+
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <h5>Số lượng: <strong>{{ order.get_cart_items }}</strong></h5>
+                </div>
+                <div class="col-md-4">
+                    <h5>Tổng tiền: <strong>{{ order.get_cart_total|floatformat:0|intcomma }} VND</strong></h5>
+                </div>
+                <div class="col-md-4 text-end">
+                    <a href="{% url 'checkout' %}" class="btn btn-success">Mua hàng</a>
+                </div>
+            </div>
+
+            <div class="p-3 bg-light rounded">
+				<div class="cart-row">
+					<div style="flex:2"></div>
+					<div style="flex:2"><strong>Thông tin</strong></div>
+					<div style="flex:1"><strong>Giá</strong></div>
+					<div style="flex:1"><strong>Số lượng</strong></div>
+					<div style="flex:1"><strong>Tổng tiền</strong></div>
+				</div>
+				
+				{% for item in items %}
+				<div class="d-flex align-items-center border-bottom py-3">
+					<div style="flex:2"><img class="row-image" src="{{item.product.ImageURL}}"></div>
+					<div style="flex:2"><p>{{item.product.name}}</p></div>
+					<div style="flex:1"><p>{{item.product.price|floatformat:0|intcomma}} VND</p></div>
+					<div style="flex:1">
+						<p class="quantity">{{item.quantity}}</p>
+						<div class="quantity">
+							<img data-product = {{item.product.id}} data-action = "add" class="chg-quantity update-cart" src="{% static  'app/images/arrow-up.png' %}">
+					
+							<img data-product = {{item.product.id}} data-action = "remove" class="chg-quantity update-cart" src="{% static  'app/images/arrow-down.png' %}">
+						</div>
+					</div>
+					<div style="flex:1"><p>{{item.get_total|floatformat:0|intcomma}} VND</p></div>
+				</div>
+				{% endfor %}
+			</div>
+        </div>
+    </div>
 </div>
+
+
 {% endblock cart_content %}
