--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -41,7 +41,7 @@
         const csrftoken = getCookie('csrftoken');
         </script>
 
-        <title>web bán hàng</title>
+        <title>SmartPhone</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
